--- a/index.html
+++ b/index.html
@@ -1,139 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
-    <style>
-      body {
-        background: purple;
-      }
+	<title>Page Title</title>
+	<style>
 
-      .red li {
-        background: red;
-      }
+    body {
+      background: purple;
+      font-size: 100%;
+    }
 
-      .gold li {
-        background: gold;
-      }
+    .red li {
+      background: red;
+    }
 
-      .flex-group {
-        margin: auto;
-        display: flex;
-        flex-flow: column;
-        justify-content: space-around;
-      }
+    .gold li {
+      background: gold;
+    }
 
-      .flex-header {
-        margin: 1%;
+    .flex-group {
+      margin: auto;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-around;
+    }
 
-        display: flex;
-        flex-flow: row;
-        justify-content: space-around;
-      }
+    .flex-header {
+      margin: 1%;
 
-      .flex-body {
-        margin: 1%;
+      display: flex;
+      flex-flow: row;
+      justify-content: space-around;
+    }
 
-        display: flex;
-        flex-flow: row;
-        justify-content: space-around;
+    .flex-body {
+      margin: 1%;
 
-        height: 1000px;
-      }
+      display: flex;
+      flex-flow: row;
+      justify-content: space-around;
 
-      .flex-container-left {
-        flex: 4 5 auto;
-        display: flex;
-        flex-flow: column;
-        align-items: space-around;
-        align-content: flex-start;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        border: 1px solid green;
-      }
+      height: 1000px;
+    }
 
-      .flex-container-right {
-        flex: 1 5 auto;
-        display: flex;
-        flex-flow: column;
-        align-items: space-around;
-        align-content: flex-start;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        border: 1px solid black;
-      }
+    .flex-container-left {
+      flex: 3 4;
+      display: flex;
+      flex-flow: column;
+      align-items: space-around;
+      align-content: flex-start;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      border: 1px solid green;
+    }
 
-      .flex-item {
-        flex: 1 1 auto;
-        padding: 5px;
-        margin: 10px;
-        line-height: 100px;
-        color: black;
-        font-weight: bold;
-        font-size: 2em;
-        text-align: center;
-      }
+    .flex-container-right {
+      flex: 1 4;
+      display: flex;
+      flex-flow: column;
+      align-items: space-around;
+      align-content: flex-start;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      border: 1px solid black;
+    }
 
-      .header {
-        display: flex;
-        flex: 1 3 auto;
+    .flex-item {
+      flex: 1 1 auto;
+      padding: 5px;
+      margin: 10px;
+      line-height: 100px;
+      color: black;
+      font-weight: bold;
+      font-size: 2em;
+      text-align: center;
+    }
 
-        background-color: white;
-        height: 100px;
-        margin-top: 5%;
+    .header {
+      display: flex;
+      flex: 3 7;
 
-        border: 1px solid black;
-      }
+      background-color: white;
+      height: 100px;
+      margin-top: 5%;
 
-      .nav {
-        display: flex;
-        flex: 2 3 auto;
+      border: 1px solid black;
+    }
 
-        background-color: white;
-        height: 100px;
-        margin-top: 5%;
+    .nav {
+      display: flex;
+      flex: 4 7;
 
-        border: 1px solid black;
-      }
+      background-color: white;
+      height: 100px;
+      margin-top: 5%;
 
-      .footer {
-        background-color: white;
-        width: 100%;
-        height: 100px;
-        margin-bottom: 3%;
+      border: 1px solid black;
+    }
 
-        border: 1px solid black;
-      }
+    .footer {
+      background-color: white;
+      width: 100%;
+      height: 100px;
+      margin-bottom: 3%;
 
-    </style>
-  </head>
+      border: 1px solid black;
+    }
+
+    h1 {
+      margin: auto;
+
+      font-size: 3em;
+      font-family: Georgia, Times, serif;
+    }
+
+	</style>
+</head>
 <body>
 
   <div class="flex-group">
     <div class="flex-header">
       <header class="header">
-        Welcome to Panther eSports
+        <img src=C:\Users\Sean\Desktop\transparentLogo.png style="width:79px;height:100px;">
+        <h1>Welcome to Panther eSports</h1>
       </header>
       <nav class="nav">
         Navigation
       </nav>
     </div>
-    
+
     <div class="flex-body">
       <ul class="flex-container-left red">
         <li class="flex-item">Image</li>
         <li class="flex-item">Body</li>
       </ul>
+
       <ul class="flex-container-right gold">
         <li class="flex-item">Sidebar</li>
       </ul>
     </div>
-
     <footer class="footer">
       Check us out on social media!
     </footer>
   </div>
+
 
 </body>
 </html>
