--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		      		flex: 3 7;
 
 		      		background-color: white;
-				      height: 100px;
+				height: 100px;
 		      		margin-top: 5%;
 		    	}
 
@@ -110,10 +110,9 @@
       				font-family: Georgia, Times, serif;
     			}
 			
-    			p.navigation {
+    			div.navigation {
   				margin: auto;
-  				word-spacing: 4em;
-				font-size: 1.5em
+				font-size: 1em
 			}
 
 	</style>
@@ -126,11 +125,13 @@
         <img src=C:\Users\Sean\Desktop\transparentLogo.png style="width:79px;height:100px;">
         <h1>Welcome to Panther eSports</h1>
       </header>
-      <nav class="nav">
-	<p class="navigation">
-      	  Home About-Us Calendar Updates Contact-Us
-      	</p>
-      </nav>
+	    <nav class="nav">
+		<div class="navigation">Home</div>
+		<div class="navigation">About Us</div>
+	      	<div class="navigation">Calendar</div>
+	      	<div class="navigation">Updates</div>
+	      	<div class="navigation">Contact Us</div>
+	    </nav>
     </div>
 
     <div class="flex-body">
