--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 		      		background-color: white;
 		      		height: 100px;
 		      		margin-top: 5%;
+				padding-left: 5%;
 		    	}
 
 		    	.footer {
@@ -112,7 +113,7 @@
 			
     			div.navigation {
   				margin: auto;
-				font-size: 2em
+				font-size: 1.5em
 			}
 
 	</style>
