--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				height: 1000px;
 		    	}
 
-				.flex-container-left {
+			.flex-container-left {
 				flex: 3 4;
 				display: flex;
 				flex-flow: column;
@@ -82,6 +82,7 @@
 
 		      		background-color: white;
 				height: 100px;
+				margin-top: 5%;
 		    	}
 
 		    	.nav {
@@ -91,7 +92,6 @@
 		      		background-color: white;
 		      		height: 100px;
 		      		margin-top: 5%;
-				padding-left: 5%;
 		    	}
 
 		    	.footer {
